# qt-serial-port-utils

./: CMakeLists.txt  readme.md
src/: main.cpp
src/headers/: mainwindows.h
src/impls/: mainwindows.cpp
src/ui/: mainwindows.ui  ui_mainwindows.h
